# Game2D-plusplus

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Game/: CMakeLists.txt  main.cpp
Game/core/constants/: constants_core.hpp
Game/core/enums/: E_action.hpp  E_alignment.hpp  E_anchor.hpp  E_attribute.h  E_attribute.hpp  E_biome.hpp  E_body.h  E_body.hpp  E_build.hpp  E_building.hpp  E_codex.h  E_codex.hpp  E_color.hpp  E_consumable.h  E_consumable.hpp  E_entity.hpp  E_equipment.hpp  E_event.h  E_event.hpp  E_folder.hpp  E_font.h  E_font.hpp  E_font_style.h  E_font_style.hpp  E_frame.hpp  E_graphic.h  E_graphic.hpp  E_hability.h  E_hability.hpp  E_hability_frame.hpp  E_hand.h  E_hand.hpp  E_hud.hpp  E_hud_route.hpp  E_icon.hpp  E_item.hpp  E_keyboard_key.hpp  E_language.h  E_language.hpp  E_log_level.hpp  (+30 more)
Game/core/tools/: event.cpp  event.hpp
Game/game/elements/: body_2D.cpp  body_2D.hpp  node_2D.cpp  node_2D.hpp
Game/game/huds/: logger_hud.cpp  logger_hud.hpp
Game/game/scenes/: main_scene.cpp  main_scene.hpp  world_scene.cpp  world_scene.hpp
Game/infra/adapters/: circle_adapter.hpp  font_adapter.hpp  rect_adapter.cpp  rect_adapter.hpp  rectangle_adapter.hpp  sprite_adapter.hpp  texture_adapter.h  vector_adapter.cpp  vector_adapter.h  vector_adapter.hpp  viewport_adapter.cpp  viewport_adapter.h  viewport_adapter.hpp  window_adapter.cpp  window_adapter.hpp
Game/infra/adapters/constants/: constants_adapter.hpp  constants_callback.hpp
Game/infra/adapters/contracts/: I_circle.hpp  I_drawable.h  I_drawable.hpp  I_rectangle.hpp  I_sprite.hpp  I_text.hpp  I_window.h  I_window.hpp
Game/infra/adapters/drawables/: circle_adapter.cpp  circle_adapter.hpp  rectangle_adapter.cpp  rectangle_adapter.hpp  sprite_adapter.cpp  sprite_adapter.hpp  text_adapter.cpp  text_adapter.hpp
Game/infra/adapters/functions/: color_adapter.hpp  enum_adapter.hpp
Game/infra/adapters/resources/: font_adapter_resource.hpp  music_adapter_resource.hpp  sound_adapter_resource.hpp  texture_adapter_resource.hpp
Game/infra/adapters/shapes/: rect_adapter.cpp  rect_adapter.hpp  vector_adapter.cpp  vector_adapter.hpp  viewport_adapter.cpp  viewport_adapter.hpp
Game/infra/managers/: camera_manager.cpp  camera_manager.hpp  event_manager.cpp  event_manager.hpp  resource_manager.cpp  resource_manager.hpp  resource_manager.tpp  router_manager.cpp  router_manager.hpp  sound_manager.cpp  sound_manager.hpp  window_manager.cpp  window_manager.hpp
Game/infra/managers/contracts/: I_body_2d.hpp  I_hud.hpp  I_node_2D.hpp  I_scene.hpp
Game/infra/managers/dataTransports/: camera_args.hpp  font_args.hpp  keyboard_args.hpp  keyboard_transport.hpp  mouse_args.hpp  mouse_transport.hpp  route_args.hpp  size_args.hpp  sound_args.hpp
GameInterop/: CMakeLists.txt  Readme.md  viewport_adapter_api.cpp  viewport_adapter_api.hpp
GameInterop/CS/: ViewportAdapter.cs
GameSpec/: CMakeLists.txt  main.cpp
GameSpec/adapters/: rect_adapter_spec.cpp  vector_adapter_spec.cpp  vector_adapter_spec.hpp  viewport_adapter_spec.cpp
GameSpec/core/tools/: event_spec.cpp
core/: CMakeLists.txt
core/enums/: E_action.h  E_alignment.h  E_anchor.h  E_biome.h  E_build.h  E_building.h  E_color.h  E_entity.h  E_equipment.h  E_folder.h  E_frame.h  E_hability_frame.h  E_hud_route.h  E_icon.h  E_item.h  E_log_level.h  E_primary.h  E_profession.h  E_proficiency.h  E_quality.h  E_race.h  E_view_route.h  E_window_mode.h  E_world_size.h
core/tools/: event.cpp  event.h
infra/adapters/: circle_adapter.h  drawable_adapter.h  music_adapter.h  rect_adapter.h  rectangle_adapter.h  sound_adapter.h  sprite_adapter.h  text_adapter.h  vector_adapter.cpp  vector_adapter.h  viewport_adapter.h  window_adapter.h
infra/adapters/contracts/: I_drawable.h  I_window.h
